<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fullNameTextView"
            style="@style/profileFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

        <TextView
            android:id="@+id/usernameTextView"
            style="@style/profileUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameTextView" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
            tools:layout_editor_absoluteX="-44dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    style="@style/profileMainAttributeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/level" />

                <TextView
                    style="@style/profileMainAttributeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activeness" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/levelTextView"
                    style="@style/profileMainAttributeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

                <TextView
                    android:id="@+id/activenessTextView"
                    style="@style/profileMainAttributeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="99" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    style="@style/profileMainAttributeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helpfulness" />

                <TextView
                    style="@style/profileMainAttributeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intelligence" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/helpfulnessTextView"
                    style="@style/profileMainAttributeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="70" />

                <TextView
                    android:id="@+id/intelligenceTextView"
                    style="@style/profileMainAttributeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20" />

            </LinearLayout>

        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>